--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html>
-<head><title>Ruby on Rails Tutorial Sample App | <%=@title %>
-	<%= csrf_meta_tag%>
+<head><title><%= title %>
+	
 </title>
+<%= csrf_meta_tag%>
 </head>
 	<body>
 		<%=yield%>
