--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,6 +4,9 @@
 	
 </title>
 <%= csrf_meta_tag%>
+<%= stylesheet_link_tag 'blueprint/screen', :media => 'screen'%>
+<%= stylesheet_link_tag 'blueprint/print', :media => 'print'%>
+
 </head>
 	<body>
 		<%=yield%>
